added html code to file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <header>
+        <h1>Daily Planner</h1>
+        <p id="currentDay"></p>
+    </header>
+    <div class="time-blocks" id="timeBlocks"></div>
     <script src="script.js"></script>
 </body>
 </html>
