--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Daily Planner</title>
-    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
 
@@ -12,7 +13,7 @@
         <h1>Daily Planner</h1>
         <p id="currentDay"></p>
     </header>
-    <div class="time-blocks" id="timeBlocks"></div>
+    <div class="time-block" id="timeBlocks"></div>
     <script src="script.js"></script>
 </body>
 </html>
